<resources>
    <string name="app_name">MyShoppingList</string>

    <string-array name="categories_array">
        <item>Food</item>
        <item>Clothes</item>
        <item>Home</item>
        <item>Other</item>
    </string-array>

    <string name="edit_item">Edit Item</string>
    <string name="add_item">Add Item</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="null_price_filler">0</string>
    <string name="null_details_filler"> </string>
    <string name="item_dialog_handler_attach_error">The activity does not implement the ItemHandler interface</string>
    <string name="about_item">About Your Item:</string>
    <string name="ok">Ok</string>
    <string name="delete_item">Are You Sure You Want To Delete This Item?</string>
    <string name="delete_all">Are You Sure You Want To Delete All Items?</string>
    <string name="price">Price:</string>
    <string name="bought">Bought?</string>
    <string name="details">Details</string>
    <string name="item">Item:</string>
    <string name="item_directions">Item Category:</string>
    <string name="price_directions">Price:</string>
    <string name="item_hint">Enter Item Here</string>
    <string name="price_hint">Enter Price Here</string>
    <string name="details_direction">Additional Details:</string>
    <string name="details_hint">Enter Details Here</string>
    <string name="bought_label">Bought</string>
</resources>