<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item"
        android:maxLines="1"
        android:textSize="16sp"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_hint"
        android:text=""
        android:minHeight="48dp"
        android:maxLines="1"
        android:layout_margin="10dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="133dp">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:entries="@array/categories_array"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/item_directions"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner"
            app:layout_constraintVertical_bias="0.576" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_directions"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/etPrice"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/etPrice"
            app:layout_constraintVertical_bias="0.538" />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/spinner" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_direction"
        android:textSize="16sp"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/etDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details_hint"
        android:inputType="text"
        android:maxLines="3"
        android:minHeight="48dp"
        android:layout_margin="10dp"/>

    <CheckBox
        android:id="@+id/cbBought"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bought_label"
        android:layout_margin="10dp"/>

</LinearLayout>