<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="24dp"
        android:maxLines="1"
        android:text="@string/null_details_filler"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivImg"
        app:layout_constraintStart_toEndOf="@+id/ivImg"
        app:layout_constraintTop_toTopOf="@+id/ivImg" />

    <View
        android:id="@+id/view"
        android:layout_width="320dp"
        android:layout_height="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/itemline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivImg" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:maxLines="1"
        android:text="@string/null_price_filler"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvPriceTitle"
        app:layout_constraintStart_toEndOf="@+id/tvPriceTitle" />

    <TextView
        android:id="@+id/tvDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:maxLines="1"
        android:text="@string/details"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <ImageView
        android:id="@+id/ivImg"
        android:layout_width="77dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <CheckedTextView
        android:id="@+id/ctview"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:checkMark="@drawable/check"
        android:checked="false"
        android:scaleType="centerCrop"
        android:text="@string/bought"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvDetails"
        app:layout_constraintTop_toBottomOf="@+id/tvDetails" />

    <TextView
        android:id="@+id/tvPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/ctview"
        app:layout_constraintTop_toBottomOf="@+id/ctview" />


</androidx.constraintlayout.widget.ConstraintLayout>